add route /api/users/withdraw
fixed docs
